package.json-fix1
Changelog:
- package.json verisons fix

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "s5-utils-nodejs",
-  "version": "0.1.0_beta5",
-  "description": "S5 Utils Nodejs",
+  "version": "0.1.0-beta5",
+  "description": "S5 Utils Nodejs ",
   "repository": "https://github.com/parajbs-dev/s5-utils-nodejs",
   "main": "src/index.js",
   "scripts": {
